--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -13,12 +13,14 @@ android {
     defaultConfig {
         testInstrumentationRunnerArguments
         testInstrumentationRunnerArguments
+        testInstrumentationRunnerArguments
+        testInstrumentationRunnerArguments
         applicationId "com.tanfra.shopmob"
         minSdk 25
         targetSdk 33
         versionCode 1
         versionName "1.2"
-        resConfigs 'en'
+        resourceConfigurations += ['en']
 
         // FirebaseUI includes language support for all languages --> limit to English
 
@@ -91,88 +93,103 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.8.20'
 
     // serialization using kotlinx-serialization (avoids reflection [parcelize] and works with the
     // gradle "serialization" plugin (see above) --> does the "introspection" at compile time to
     // add possibly needed serializer code (for complex data structures)
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
 
     // https://console.firebase.google.com/project/shopmob-335809/overview
     //
     // https://firebase.google.com/docs/android/setup
     // ... when using the BoM, you don't specify versions in the associated library dependencies
-    implementation platform("com.google.firebase:firebase-bom:30.5.0")
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation "com.google.firebase:firebase-common-ktx"
     implementation "com.google.firebase:firebase-storage-ktx"
     implementation "com.google.firebase:firebase-messaging-ktx"
     implementation "com.google.firebase:firebase-analytics-ktx"
 
     // use open source library firebase-ui to simplify auth flows
-    implementation "com.firebaseui:firebase-ui-auth:8.0.1"
+    //
+    // Stackoverflow on FireBase vs. FireBaseUI:
+    // https://stackoverflow.com/questions/38799365/firebaseui-and-firebase-what-is-the-difference#:~:text=Firebase%20is%20a%20platform%20that,to%20user%20interface%20elements%20easier.
+    //
+    // Firebase is a platform that you use to build web and mobile applications. It consists of a
+    // suite of cloud services and a set of SDKs (and in some cases REST APIs) to access those
+    // services.
+    //
+    //FirebaseUI is a set of libraries that build on top of the Firebase SDKs to make binding to
+    // user interface elements easier.
+    //
+    //Specifically: FirebaseUI for Android and for iOS wrap the Database and Authentication SDKs of
+    // Firebase to make it easy to use the services in Android and iOS applications.
+    //
+    //FirebaseUI for web is a newer entrant to the field and only wraps the Authentication SDK.
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
 
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
-    implementation "com.facebook.android:facebook-login:14.1.1"
+    implementation 'com.facebook.android:facebook-login:16.0.1'
 
     // retrofit & moshi
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
-    implementation "com.squareup.moshi:moshi:1.13.0"
-    implementation "com.squareup.moshi:moshi-kotlin:1.13.0"
+    implementation 'com.squareup.moshi:moshi:1.14.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6"
 
     // loading an image from URL for display in ImageView
-    implementation "io.coil-kt:coil:2.2.0"
+    implementation 'io.coil-kt:coil:2.3.0'
 
     // workManager
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
     // App dependencies
-    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation "androidx.annotation:annotation:1.5.0"
+    implementation 'androidx.annotation:annotation:1.6.0'
 
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "com.google.android.material:material:1.6.1"
-    implementation "androidx.recyclerview:recyclerview:1.3.0-rc01"
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
-    implementation "com.google.code.gson:gson:2.9.1"
+    implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation "androidx.fragment:fragment-ktx:1.5.3"
-    implementation "androidx.activity:activity-ktx:1.6.0"
+    implementation 'androidx.fragment:fragment-ktx:1.5.7'
+    implementation 'androidx.activity:activity-ktx:1.7.1'
 
 
     // Architecture Components
     // Navigation dependencies
-    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.6.1'
     //kapt "androidx.lifecycle:lifecycle-compiler:2.5.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
-    implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
 
     // Room dependencies
-    implementation "androidx.room:room-ktx:2.4.3"
-    implementation "androidx.room:room-runtime:2.4.3"
-    implementation "com.google.firebase:firebase-auth-ktx:21.0.8"
-    kapt "androidx.room:room-compiler:2.4.3"
+    implementation 'androidx.room:room-ktx:2.5.1'
+    implementation 'androidx.room:room-runtime:2.5.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.3.0'
+    kapt 'androidx.room:room-compiler:2.5.1'
 
     // Coroutines Dependencies
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     // Koin
-    implementation "io.insert-koin:koin-core:3.2.0"
-    implementation "io.insert-koin:koin-android:3.2.0"
+    implementation 'io.insert-koin:koin-core:3.4.0'
+    implementation 'io.insert-koin:koin-android:3.4.0'
 
     //Maps & Geofencing
-    implementation "com.google.android.gms:play-services-location:20.0.0"
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation "com.google.android.gms:play-services-maps:18.1.0"
 
     // Timber (logging)
@@ -182,52 +199,52 @@ dependencies {
     // Dependencies for local unit tests
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
-    testImplementation "androidx.arch.core:core-testing:2.1.0"    // liveData testing
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'    // liveData testing
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
-    testImplementation "org.robolectric:robolectric:4.8.2"
+    testImplementation 'org.robolectric:robolectric:4.10'
     testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "org.mockito:mockito-core:4.7.0"
-    testImplementation "io.insert-koin:koin-test:3.2.0"
-    testImplementation "io.insert-koin:koin-test-junit4:3.2.0"
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+    testImplementation 'io.insert-koin:koin-test:3.4.0'
+    testImplementation 'io.insert-koin:koin-test-junit4:3.4.0'
 
     // Test Orchestration
-    androidTestImplementation("androidx.test:runner:1.4.0")
-    androidTestUtil("androidx.test:orchestrator:1.4.1")
-    androidTestImplementation("androidx.test.espresso:espresso-intents:3.4.0")
+    androidTestImplementation('androidx.test:runner:1.5.2')
+    androidTestUtil('androidx.test:orchestrator:1.4.2')
+    androidTestImplementation('androidx.test.espresso:espresso-intents:3.5.1')
 
     // uiAutomator Testing
     androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
 
     // AndroidX Test - JVM testing
-    testImplementation "androidx.test:core-ktx:1.4.0"
-    testImplementation "androidx.test.ext:junit-ktx:1.1.3"
-    testImplementation "androidx.test:rules:1.4.0"
+    testImplementation 'androidx.test:core-ktx:1.5.0'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.5'
+    testImplementation 'androidx.test:rules:1.5.0'
 
 
     // AndroidX Test - Instrumented testing
-    androidTestImplementation "androidx.test:core-ktx:1.4.0"
-    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
-    androidTestImplementation "androidx.test:rules:1.4.0"
-    androidTestImplementation "androidx.room:room-testing:2.4.3"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "org.robolectric:annotations:4.8.2"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:3.4.0"
-    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.4.0"
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.room:room-testing:2.5.1'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
+    androidTestImplementation 'org.robolectric:annotations:4.10'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.5.1'
     androidTestImplementation "junit:junit:4.13.2"
 
     // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
-    debugImplementation "androidx.fragment:fragment-testing:1.5.3"
+    debugImplementation 'androidx.fragment:fragment-testing:1.5.7'
     //implementation "androidx.fragment:fragment-testing:1.5.2"
-    implementation "androidx.test:core:1.4.0"
+    implementation 'androidx.test:core:1.5.0'
     //implementation "androidx.fragment:fragment-ktx:1.5.2"
 
-    androidTestImplementation("io.insert-koin:koin-test:3.2.0") { exclude group: 'org.mockito' }
-    androidTestImplementation "io.insert-koin:koin-test-junit4:3.2.0"
-    androidTestImplementation "org.mockito:mockito-core:4.7.0"
+    androidTestImplementation('io.insert-koin:koin-test:3.4.0') { exclude group: 'org.mockito' }
+    androidTestImplementation 'io.insert-koin:koin-test-junit4:3.4.0'
+    androidTestImplementation 'org.mockito:mockito-core:5.3.1'
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.3"
 
 }
