--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.devtools.ksp'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'  // .kotlin --> KTX: nav.action accepts param. ("it")
     id 'com.google.gms.google-services'
@@ -62,10 +63,9 @@ android {
         jvmTarget = '17'
     }
 
-    buildFeatures {
-        dataBinding true
+    dataBinding {
+        enabled true
     }
-
 
     testOptions {
         execution = "ANDROIDX_TEST_ORCHESTRATOR"
@@ -167,7 +167,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.6.1'
-    //kapt "androidx.lifecycle:lifecycle-compiler:2.5.1"
+//    kapt "androidx.lifecycle:lifecycle-compiler:2.6.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
@@ -179,10 +179,11 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.5.1'
     implementation 'androidx.room:room-runtime:2.5.1'
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
-    kapt 'androidx.room:room-compiler:2.5.1'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.21'
+    ksp 'androidx.room:room-compiler:2.5.1'
 
     // Coroutines Dependencies
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
 
     // Koin
     implementation 'io.insert-koin:koin-core:3.4.0'
@@ -200,8 +201,8 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation 'androidx.arch.core:core-testing:2.2.0'    // liveData testing
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0'
     testImplementation 'org.robolectric:robolectric:4.10.2'
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation 'org.mockito:mockito-core:5.3.1'
@@ -225,7 +226,7 @@ dependencies {
     // AndroidX Test - Instrumented testing
     androidTestImplementation 'androidx.test:core-ktx:1.5.0'
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0"
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0'
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.room:room-testing:2.5.1'
     androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
