--- a/code/build.gradle
+++ b/code/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:8.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21'
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.8.21"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
         classpath "com.google.gms:google-services:4.3.15"
@@ -17,6 +17,7 @@ plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.21' apply false
+    id 'com.google.devtools.ksp' version '1.8.21-1.0.11' apply false
 }
 
 task clean(type: Delete) {
