--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         testInstrumentationRunnerArguments
@@ -93,7 +93,7 @@ android {
 
 dependencies {
 
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.8.21'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.9.0'
 
     // serialization using kotlinx-serialization (avoids reflection [parcelize] and works with the
     // gradle "serialization" plugin (see above) --> does the "introspection" at compile time to
@@ -104,7 +104,7 @@ dependencies {
     //
     // https://firebase.google.com/docs/android/setup
     // ... when using the BoM, you don't specify versions in the associated library dependencies
-    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation platform('com.google.firebase:firebase-bom:32.2.2')
     implementation "com.google.firebase:firebase-common-ktx"
     implementation "com.google.firebase:firebase-storage-ktx"
     implementation "com.google.firebase:firebase-messaging-ktx"
@@ -130,18 +130,18 @@ dependencies {
 
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
-    implementation 'com.facebook.android:facebook-login:16.0.1'
+    implementation 'com.facebook.android:facebook-login:16.1.3'
 
     // retrofit & moshi
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
-    implementation 'com.squareup.moshi:moshi:1.14.0'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
+    implementation 'com.squareup.moshi:moshi:1.15.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.15.0'
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6"
 
     // loading an image from URL for display in ImageView
-    implementation 'io.coil-kt:coil:2.3.0'
+    implementation 'io.coil-kt:coil:2.4.0'
 
     // workManager
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
@@ -153,13 +153,13 @@ dependencies {
 
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation 'androidx.fragment:fragment-ktx:1.5.7'
-    implementation 'androidx.activity:activity-ktx:1.7.1'
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+    implementation 'androidx.activity:activity-ktx:1.7.2'
 
 
     // Architecture Components
@@ -171,23 +171,23 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0' // 2.7.0 needs API 34
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0' // 2.7.0 needs API 34
     implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
 
     // Room dependencies
-    implementation 'androidx.room:room-ktx:2.5.1'
-    implementation 'androidx.room:room-runtime:2.5.1'
-    implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.21'
-    ksp 'androidx.room:room-compiler:2.5.1'
+    implementation 'androidx.room:room-ktx:2.5.2'
+    implementation 'androidx.room:room-runtime:2.5.2'
+    implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0'
+    ksp 'androidx.room:room-compiler:2.5.2'
 
     // Coroutines Dependencies
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
     // Koin
-    implementation 'io.insert-koin:koin-core:3.4.0'
-    implementation 'io.insert-koin:koin-android:3.4.0'
+    implementation 'io.insert-koin:koin-core:3.4.3'
+    implementation 'io.insert-koin:koin-android:3.4.3'
 
     //Maps & Geofencing
     implementation 'com.google.android.gms:play-services-location:21.0.1'
@@ -201,13 +201,13 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation 'androidx.arch.core:core-testing:2.2.0'    // liveData testing
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0'
-    testImplementation 'org.robolectric:robolectric:4.10.2'
-    testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation 'org.mockito:mockito-core:5.3.1'
-    testImplementation 'io.insert-koin:koin-test:3.4.0'
-    testImplementation 'io.insert-koin:koin-test-junit4:3.4.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
+    testImplementation 'org.robolectric:robolectric:4.10.3'
+    testImplementation "com.google.truth:truth:1.1.5"
+    testImplementation 'org.mockito:mockito-core:5.4.0'
+    testImplementation 'io.insert-koin:koin-test:3.4.3'
+    testImplementation 'io.insert-koin:koin-test-junit4:3.4.3'
 
     // Test Orchestration
     androidTestImplementation('androidx.test:runner:1.5.2')
@@ -226,11 +226,11 @@ dependencies {
     // AndroidX Test - Instrumented testing
     androidTestImplementation 'androidx.test:core-ktx:1.5.0'
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.0'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     androidTestImplementation 'androidx.test:rules:1.5.0'
-    androidTestImplementation 'androidx.room:room-testing:2.5.1'
+    androidTestImplementation 'androidx.room:room-testing:2.5.2'
     androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
-    androidTestImplementation 'org.robolectric:annotations:4.10.2'
+    androidTestImplementation 'org.robolectric:annotations:4.10.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
@@ -238,14 +238,14 @@ dependencies {
     androidTestImplementation "junit:junit:4.13.2"
 
     // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
-    debugImplementation 'androidx.fragment:fragment-testing:1.5.7'
+    debugImplementation 'androidx.fragment:fragment-testing:1.6.1'
     //implementation "androidx.fragment:fragment-testing:1.5.2"
     implementation 'androidx.test:core:1.5.0'
     //implementation "androidx.fragment:fragment-ktx:1.5.2"
 
-    androidTestImplementation('io.insert-koin:koin-test:3.4.0') { exclude group: 'org.mockito' }
-    androidTestImplementation 'io.insert-koin:koin-test-junit4:3.4.0'
-    androidTestImplementation 'org.mockito:mockito-core:5.3.1'
+    androidTestImplementation('io.insert-koin:koin-test:3.4.3') { exclude group: 'org.mockito' }
+    androidTestImplementation 'io.insert-koin:koin-test-junit4:3.4.3'
+    androidTestImplementation 'org.mockito:mockito-core:5.4.0'
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.3"
 
 }
