--- a/code/build.gradle
+++ b/code/build.gradle
@@ -4,8 +4,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.0'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21'
-        classpath "org.jetbrains.kotlin:kotlin-serialization:1.8.21"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.9.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.0"
         classpath "com.google.gms:google-services:4.3.15"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,10 +16,10 @@ buildscript {
 plugins {
     id 'com.android.application' version '8.1.0' apply false
     id 'com.android.library' version '8.1.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.21' apply false
-    id 'com.google.devtools.ksp' version '1.8.21-1.0.11' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
